--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CyberSecurityChatbotWPF.MainWindow"
+﻿<Window x:Class="Part_3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Cybersecurity Awareness Chatbot" Height="650" Width="900">
